--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@
     margin: 0;
 }
 
-.row {
+.fx-row {
     width: 100%;
     display: flex;
     gap: 20px;
@@ -58,7 +58,7 @@
     justify-content: space-between;
 }
 
-.col {
+.fx-col {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -98,9 +98,9 @@ p {
 
 /* Estilos generales */
 body {
-    font-family: 'Outfit', sans-serif;
-    background-color: var(--light);
-    color: var(--dark);
+    font-family: 'Outfit', sans-serif !important;
+    background-color: var(--light) !important;
+    color: var(--dark) !important;
 
     margin: 0;
 }
@@ -109,7 +109,7 @@ section h1 {
     font-size: 2.5rem;
 }
 
-.container {
+.fx-container {
     max-width: 1200px;
     margin: 0 auto;
     width: 100%;
@@ -120,7 +120,7 @@ header div {
     justify-content: space-between;
     align-items: center;
     border-radius: 10px;
-    padding: 10px 20px;
+    padding: 15px 30px !important;
     margin-top: 50px;
     
     background-color: var(--teal);
@@ -146,6 +146,7 @@ header div {
 ul {
     text-decoration: none;
     list-style: none;
+    padding: 0 !important;
 }
 
 nav ul {
@@ -160,7 +161,7 @@ section {
     align-items: center;
     gap: 20px;
 
-    margin: 100px 0;
+    margin: 100px 0 !important;
 }
 
 .display h1 {
@@ -174,22 +175,47 @@ div.image{
 
 .image img:not(.bg-img) {
     mask-image: linear-gradient(black 80%, transparent);
+    width: 100%;
 }
 
 img.bg-img {
-    width: 110%;
+    width: 100%;
     bottom: 0;
     right: 0;
     position: absolute;
     z-index: -10;
 }
 
-a {
-    text-decoration: none;
-    color: currentColor;
+.social {
+    display: flex; 
+    flex-direction: row; 
+    justify-content: center;
+    gap: 20px; 
+    font-size: 2rem;
 }
 
-.btn {
+a {
+    text-decoration: none !important;
+    color: var(--light) !important;
+
+    &.social {
+        font-size: 24px;
+        color: var(--dark) !important;
+    }
+
+    &.social:hover {
+        color: var(--dark) !important;
+        transform: scale(1.05);
+    }
+
+    &:hover {
+        color: var(--light) !important;
+        opacity: 0.8;
+        transform: scale(1.05);
+    }
+}
+
+.pg-btn {
     padding: 10px 25px;
     font-weight: 500;
     border: none;
@@ -210,32 +236,63 @@ a {
 }
 
 input, textarea {
-    width: 100%;
-    padding: 15px 25px 15px 45px;
-    margin: 10px 0;
+    width: 100% !important;
+    padding: 15px 25px 15px 45px !important;
+    margin: 10px 0 !important;
     border-radius: 10px;
     outline: 2px solid var(--teal);
     border: none;
     font-family: 'Outfit', sans-serif;
     font-size: 16px;
     font-weight: 500;
-    resize: none;
+    resize: none !important;
+
+    &:valid, &:focus:valid {
+        outline: 2px solid var(--success);
+    }
+    &:focus:invalid {
+        outline: 2px solid var(--fail);
+    }
 }
 
 textarea {
-    padding: 15px 25px;
+    padding: 15px 25px !important;
 }
 
 .input-container {
     position: relative;
+
+    .input-icon {
+        position: absolute;
+        top: 50%;
+        left: 20px;
+        transform: translateY(-50%);
+    }
+
+    span {
+        position: absolute;
+        top: -12px;
+        left: 0;
+
+        color: var(--fail);
+
+        display: none;
+    }
+
+    &.invalid {
+        input {
+            outline: 2px solid var(--fail);
+        }
+        textarea {
+            outline: 2px solid var(--fail);
+        }
+        span {
+            display: block;
+        }
+    }
 }
 
-.input-icon {
-    position: absolute;
-    top: 50%;
-    left: 20px;
-    transform: translateY(-50%);
-}
+
 
 footer {
     background-color: var(--dark);
@@ -249,6 +306,76 @@ footer {
 }
 
 
+/* Media Queries */
+@media screen and (max-width: 768px) {
+    header div {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    nav ul {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    section h1 {
+        font-size: 2.5rem !important;
+        text-align: center;
+    }
+
+    section {
+        margin: 50px 0 !important;
+    }
+
+    #curso div img {
+        display: none;  
+    }
+
+    #curso div h2 {
+        font-size: 2.5rem !important;
+    }
+
+    .pg-btn {
+        padding: 10px 20px;
+    }
+
+
+    /* .fx-row {
+        flex-direction: column;
+    }
+
+    .fx-col {
+        align-items: flex-start;
+    }
+
+    .image img:not(.bg-img) {
+        mask-image: none;
+    }
+
+    img.bg-img {
+        width: 100%;
+    }
+
+    .logo {
+        gap: 5px;
+    }
+
+    .logo h1 {
+        font-size: 18px;
+    }
+
+    
+
+    input, textarea {
+        padding: 15px 20px 15px 45px !important;
+    }
+
+    footer {
+        text-align: center;
+    } */
+}
+
+/* Animaciones */
 .anim-drop {
     animation: 3s infinite drop ease-out;
 }
